tests/NormalTests/paczka1/fuzzy1/85569675.err
Error in line 4: WY4uvcBHBw A718 64,0
Error in line 15: KM0Fj S628 16,
Error in line 20: ssSq A71 1,92
Error in line 24: WY4uvcBHBw A718 -2,2
Error in line 19: KM0Fj S628 69,8
Error in line 25: ssSq A71 3,4
Error in line 27: ssSq A769 88,1
Error in line 29: ssSq A71 39,9
Error in line 22: WY4uvcBHBw A718 60,9
